syntax = "proto3";
package api;

option go_package = "./api";

message SearchRequest {
  string query = 1;
  int64 limit = 2;
}

message SearchResult {
  string url = 1;
  string title = 2;
  string snippet = 3;
  string source = 4;
}

message SearchResponse { repeated SearchResult results = 1; }

message SearchError { string message = 1; }

service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse) {}
}
